--- a/js_RPG/index.html
+++ b/js_RPG/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="game"></div>
+    <div id="game">
+      <div id="stats">
+        <span class="stat">XP: 0</span>
+        <span class="stat">Health: 100</span>
+        <span class="stat">Gold: 50</span>
+      </div>
+      <div id="controls"></div>
+      <div id="monsterStats"></div>
+      <div id="text"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
