--- a/js_RPG/index.html
+++ b/js_RPG/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>RPG - Dragon Repeller</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="game">
       <div id="stats">
         <span class="stat"
-          >XP: <strong><span id="xpText">0</span></strong>
-        </span>
+          >XP: <strong><span id="xpText">0</span></strong></span
+        >
         <span class="stat"
           >Health: <strong><span id="healthText">100</span></strong></span
         >
@@ -25,9 +23,20 @@
         <button id="button2">Go to cave</button>
         <button id="button3">Fight dragon</button>
       </div>
-      <div id="monsterStats"></div>
-      <div id="text"></div>
+      <div id="monsterStats">
+        <span class="stat"
+          >Monster Name: <strong><span id="monsterName"></span></strong
+        ></span>
+        <span class="stat"
+          >Health: <strong><span id="monsterHealth"></span></strong
+        ></span>
+      </div>
+      <div id="text">
+        Welcome to Dragon Repeller. You must defeat the dragon that is
+        preventing people from leaving the town. You are in the town square.
+        Where do you want to go? Use the buttons above.
+      </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
